<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_rooms"
        android:checkableBehavior="single">
        <item
            android:id="@+id/room_301"
            android:title="@string/room_301"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_302"
            android:title="@string/room_302"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_303"
            android:title="@string/room_303"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_304"
            android:title="@string/room_304"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_305"
            android:title="@string/room_305"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_538"
            android:title="@string/room_538"
            app:showAsAction="never" />
        <item
            android:id="@+id/room_marik"
            android:title="@string/room_marik"
            app:showAsAction="never" />
    </group>
</menu>